--- a/WafiSolutionAssignment/WafiSolutionAssignment.csproj
+++ b/WafiSolutionAssignment/WafiSolutionAssignment.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\employee\" />
+  </ItemGroup>
+
 </Project>
